# UoA-shuriken-robot

./: README.md
allhardwaretest/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in~  config.status  configure  configure.in  makefile.old  sensortest
allhardwaretest/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
allhardwaretest/src/: Makefile  Makefile.am  Makefile.in  Makefile.old  main.cpp  sensortest
allhardwaretest/src/.deps/: adcSpi.Po  bcm2835_timer.Po  main.Po  mouse.Po  timespec_math.Po  tlc5940.Po
allhardwaretest/src/adc/: adcSpi.cpp  adcSpi.cpp.save  adcSpi.h  aps00b_calculation.cpp  aps00b_calculation.h
allhardwaretest/src/adc/.deps/: adcSpi.Po  aps00b_calculation.Po
allhardwaretest/src/mouse/: mouse.cpp  mouse.h
allhardwaretest/src/mouse/.deps/: mouse.Po
allhardwaretest/src/tlc5940/: bcm2835_timer.cpp  timespec_math.cpp  timespec_math.h  tlc5940.cpp
allhardwaretest/src/tlc5940/.deps/: bcm2835_timer.Po  timespec_math.Po  tlc5940.Po
hardwarepwmtest/: hardwarepwmtest  timespec_math.h  tlc5940.cpp  tlc5940.h
hardwarepwmtest-spi/: main  main.c  makefile
hardwaretimer_test/: test  timer.cpp
mouse_input_test/: main.cpp.bak  makefile  mousetest
mousetest/: main.cpp
software_threaded_pwm_test/: motor.h  pwm.c
softwarepwmtest/: main.c  makefile  motor.c  pwm.h
spi_ad7908_test/: adcSpi.c  errcodes.h  main
spitest/: adcSpi.c.bak  adcSpi.h  main.c  makefile
tlc5940_pwm_test/: bcm2835_timer.h  main.cpp  makefile  timespec_math.cpp  tlc5940_pin_mapping.h
